Added sections to the HTML to prepare for CSS

--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
 
     <body>
         <header id="top">
-            <h1>Student Bio</h1>
-        </header>
-        <main>
-            <h2>Maura Salgo</h2>
-            <img src="./assets" alt="A picture of Maura wearing..." />
+            <h1 class="title">Student Bio</h1>
+        </header>  
+        <section class="lesson">
+            <h2 class="title">Maura Salgo</h2>
+            <img src="./assets/photos/IMG_0886.JPG" alt="A picture of Maura and her friend sitting outside on a balcony. Maura is wearing sunglasses and the sun is setting in the background." 
+                width="293"
+                height="220"/>
             <p>Howdy! My name is Maura and it's great to have you here. I am a native Austinite who loves horses, country music, and a rainy lake day. <br />
                 I have one rottweiler mix doggy named Willie who is obsessed with chasing lizards and going on runs in the park. <br />
                 I currently bathe dogs for a living, which can be extremely fun some days, and very stressful on others depending on what kind of mood our dogs are in.<br />
                 When I want to unwind at the end of my day, I usually go for a glass of chocolate milk and I play Spyro on Playstation.</p> 
-            <h2>Contact Info</h2>
-                <ul>
+        </section>
+        <h2 class="title">Contact Info</h2>
+            <ul>
+                <section id="Email">
                     <li><strong>Email: </strong><a href="">maurasalgo@gmail.com</a></li>
+                </section>
+                <section id="Github">
                     <li><strong>Github: </strong><a href="https://github.com/maurasal">https://github.com/maurasal</a></li>
+                </section>
+                <section id="Portfolio">
                     <li><strong>Portfolio: </strong><a href="">Coming Soon!</a></li>
-                </ul>
-        </main>
-        
-    </body>
+                </section>
+            </ul>
+        </body>
+
 </html>
